# berry-executorch

./: .gitignore  .gitmodules  Cargo.toml  README.md  android.env  android.env.sample  build.rs
.cargo/: config.toml
.devcontainer/: Dockerfile  devcontainer.json  requirements.txt
examples/: mv3.rs  two.rs
resource/model/: id.pte  two.pte
resource/python/: make_add_pte.py
src/: c_interface.rs  error.rs  lib.rs  main.rs  module.rs  tensor.rs
src/cpp/: c_interface.cpp  c_interface.h
tests/: test_mv3.rs  test_two.rs
