[package]
name = "executorch-rs"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
default = []
apple = ["coreml", "mps", "xnnpack"]
xnnpack = []
coreml = []
mps = []

android = ["xnnpack", "vulkan"]
vulkan = []


[dependencies]
thiserror = "1.0.64"

[dev-dependencies]
imageproc = "0.25.0"

[build-dependencies]
cc = "1.1.25"
