[package]
name = "executorch-rs"
version = "0.0.1"
edition = "2021"
authors = ["kadu-v (Kazuki Ikemori)"]
description = "A Rust binding for Executorch"
repository = "https://github.com/kadu-v/executorch-rs"
keywords = ["Executorch", "Binding"]

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
default = []
apple = ["coreml", "mps", "xnnpack"]
xnnpack = []
coreml = []
mps = []

android = ["xnnpack", "vulkan"]
vulkan = []


[dependencies]
thiserror = "1.0.64"

[dev-dependencies]
imageproc = "0.25.0"
dinghy-test = "0.7.3"


[build-dependencies]
cc = "1.1.25"
dotenvy = "0.15.7"
